--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "fs-extra": "3.0.1",
     "html-webpack-plugin": "2.29.0",
     "jest": "20.0.4",
+    "jsonp": "^0.2.1",
     "less": "2.7.3",
     "less-loader": "^4.1.0",
     "object-assign": "4.1.1",
@@ -98,8 +99,8 @@
     "extends": "react-app"
   },
   "devDependencies": {
-   "babel-core": "^6.26.0",
-   "babel-loader": "^7.1.5",
-   "babel-preset-env": "^1.7.0"
+    "babel-core": "^6.26.0",
+    "babel-loader": "^7.1.5",
+    "babel-preset-env": "^1.7.0"
   }
 }
