--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "css-loader": "0.28.7",
     "dotenv": "4.0.0",
     "dotenv-expand": "4.2.0",
+    "draftjs-to-html": "^0.8.4",
     "echarts": "^4.2.0-rc.2",
     "echarts-for-react": "^2.0.15-beta.0",
     "eslint": "4.10.0",
@@ -43,6 +44,7 @@
     "react": "^16.5.0",
     "react-dev-utils": "^5.0.2",
     "react-dom": "^16.5.0",
+    "react-draft-wysiwyg": "^1.12.13",
     "react-router": "^4.3.1",
     "react-router-dom": "^4.3.1",
     "resolve": "1.6.0",
