--- a/package.json
+++ b/package.json
@@ -45,8 +45,11 @@
     "react-dev-utils": "^5.0.2",
     "react-dom": "^16.5.0",
     "react-draft-wysiwyg": "^1.12.13",
+    "react-redux": "^5.1.1",
     "react-router": "^4.3.1",
     "react-router-dom": "^4.3.1",
+    "redux": "^4.0.1",
+    "redux-devtools-extension": "^2.13.6",
     "resolve": "1.6.0",
     "style-loader": "0.19.0",
     "sw-precache-webpack-plugin": "0.11.4",
