--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "bike-admin",
   "version": "0.1.0",
+  "homepage": ".",
   "private": true,
   "dependencies": {
     "antd": "^3.10.1",
@@ -10,6 +11,7 @@
     "babel-eslint": "7.2.3",
     "babel-jest": "20.0.3",
     "babel-plugin-import": "^1.9.1",
+    "babel-plugin-react-html-attrs": "^2.1.0",
     "babel-preset-react-app": "^3.1.2",
     "babel-runtime": "6.26.0",
     "case-sensitive-paths-webpack-plugin": "2.1.1",
