--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "html-webpack-plugin": "2.29.0",
     "jest": "20.0.4",
     "jsonp": "^0.2.1",
+    "lazy-img-react": "^1.0.0",
     "less": "2.7.3",
     "less-loader": "^4.1.0",
     "moment": "^2.22.2",
