--- a/package.json
+++ b/package.json
@@ -35,7 +35,6 @@
     "html-webpack-plugin": "2.29.0",
     "jest": "20.0.4",
     "jsonp": "^0.2.1",
-    "lazy-img-react": "^1.0.0",
     "less": "2.7.3",
     "less-loader": "^4.1.0",
     "moment": "^2.22.2",
@@ -48,6 +47,7 @@
     "react-dev-utils": "^5.0.2",
     "react-dom": "^16.5.0",
     "react-draft-wysiwyg": "^1.12.13",
+    "react-lazyload": "^2.3.0",
     "react-redux": "^5.1.1",
     "react-router": "^4.3.1",
     "react-router-dom": "^4.3.1",
